# az-scout-plugin-strategy-advisor

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
src/az_scout_strategy/: __init__.py  engine.py  models.py  routes.py  tools.py
src/az_scout_strategy/static/html/: strategy-tab.html
src/az_scout_strategy/static/js/: strategy-tab.js
tests/: test_strategy.py
